# cli-report-maker

./: README.md  main.py  pyproject.toml
core/: cli.py  entities.py  parsers.py  reports.py  utils.py
tests/: conftest.py  test_core.py
