[project]
name = "cli_reporter"
version = "0.1.0"
description = "script for parsing data from csv files and subsequent report generation"
authors = [
    {name = "w44121",email = "w44121@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
ruff = "^0.11.9"
